# pixel-goo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buffer.cpp  buffer.h  convert_script.fish  density.frag  density.vert  embed_shader.py  generate_cmake_includes.py  main.cpp  mingl.cpp  mingl.hpp  physics_buffer.cpp  physics_buffer.h  position.frag  position.vert  screen.frag  screen.vert  shader.cpp  shader.frag  shader.h  shader.vert  trail.frag  trail.vert  trail_first.frag  trail_first.vert  trail_second.frag  trail_second.vert  velocity.frag  velocity.vert
lib/glad/: glad.c  glad.h
shaders/: position.frag  screen.frag  velocity.frag
